k8s/apps/wodore/apps/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wd-backend-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8008
      targetPort: http
      protocol: TCP
  selector:
    app: wd-backend
---
apiVersion: v1
kind: Service
metadata:
  name: wd-backend-media
spec:
  type: ClusterIP
  ports:
    - name: media
      port: 80
      targetPort: media
      protocol: TCP
  selector:
    app: wd-backend
